docs: polish project README